# gxsim

./: .gitignore  CMakeLists.txt  README.md
ALICE/src/: HeedNewTrackModel.cc
CRAB/: CMakeLists.txt  CRAB.cc  CalcYields.C  PlotCrab.C  Xenon.gas  config.h.in  run-uni.mac  run1.mac  setup.sh  setup_krishan.sh  vis.mac
CRAB/ana/: CRAB_sim_mtg_12July2022.pptx  crab-LEM.py  kr83m.py  ~$CRAB_sim_mtg_12July2022.pptx
CRAB/data/: Brakets.stl  Chamber.stl  ImagePlane.stl  MGF2.stl  Needle14cm.stl  Needle4cm.stl  Needle9cm.stl  Needle_10.stl  Needle_15.stl  Needle_15v2.stl  Needle_5.stl  Plot Gas Files.ipynb  SteelTubes.stl  Xe_100_10bar.gas  Xe_100_6bar.gas
CRAB/data/CRAB_STL/: AnodeTube.stl  Anode_Vacuum.stl  Brackets.stl  COMSOL_Format.ipynb  Camera.stl  CathodeTube.stl  Cathode_Vacuum.stl  Chamber.stl  ChangeSTL_FirstLine.ipynb  FieldRings.stl  GAS.stl  Gas_Lens.stl  Gas_Window.stl  MgF2Lens.stl  MgF2Window.stl  Needle.ipynb  Needle_14cm.stl  Needle_4cm.stl  Needle_9cm.stl  PMT.stl  Peeks.stl  RotatedLens.stl
CRAB/data/CRAB_STL/.ipynb_checkpoints/: COMSOL_Format-checkpoint.ipynb  ChangeSTL_FirstLine-checkpoint.ipynb  Needle-checkpoint.ipynb
CRAB/data/PyBoltz_GasFiles/: XENON_100.0_10.0.gas  XENON_100.0_6.0.gas  XENON_CH4_99.5_0.5_10.0.gas  XENON_CH4_99.5_0.5_6.0.gas  gasFileGenerator.py
CRAB/include/: DegradModel.hh  DetectorConstruction.hh  FileHandling.hh  GarfieldVUVPhotonModel.hh  GasModelParameters.hh  GasModelParametersMessenger.hh  PhysicsList.hh  PmtR7378A.hh  PrimaryGenerator.hh  SensorHit.hh  SteppingAction.hh  Visibilities.hh
CRAB/include/CRAB/: GarfieldVUVPhotonModel.hh  OpAbsorption.hh  OpBoundaryProcess.hh  OpWLS.hh  PhysicsList.hh  S2Photon.h  SellmeierEquation.hh  SteppingAction.hh  Visibilities.hh
CRAB/job/: crab_job.sh
CRAB/macros/: Alpha_e.mac  Ion.mac  Single_OpPh.mac  Single_OpticalPhoton.mac  Single_alpha.mac  Single_e.mac  run.sh  run1.mac  test.ouit  test.out  vis.mac
CRAB/macros/10_Bar_test_hybrid/CRAB/jobid_4/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid/CRAB/jobid_5/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid/CRAB/jobid_6/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid/CRAB/jobid_8/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid/CRAB/jobid_9/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_1/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_10/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_11/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_2/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_3/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_4/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_5/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_6/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_7/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_8/: Single_alpha.mac
CRAB/macros/10_Bar_test_hybrid_offsetTest/CRAB/jobid_9/: Single_alpha.mac
CRAB/macros/10_Bar_test_oldGeo/CRAB/jobid_1/: Single_alpha.mac
CRAB/macros/10_Bar_test_oldGeo/CRAB/jobid_10/: Single_alpha.mac
CRAB/macros/10_Bar_test_oldGeo/CRAB/jobid_2/: Single_alpha.mac
CRAB/macros/10_Bar_test_oldGeo/CRAB/jobid_3/: Single_alpha.mac
CRAB/macros/10_Bar_test_oldGeo/CRAB/jobid_7/: Single_alpha.mac
CRAB/notebooks/: GetElectronAlpha.ipynb
CRAB/src/: DegradModel.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  FileHandling.cc  GarfieldVUVPhotonModel.cc  GasBoxSD.cc  GasModelParametersMessenger.cc  HexagonMeshTools.cc  MyUserActionInitialization.cc  OpticalMaterialProperties.cc  PhysListEmStandard.cc  PhysicsList.cc  PmtR7378A.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensorHit.cc  SensorSD.cc  SteppingAction.cc  TrackingAction.cc  XenonProperties.cc
CRAB/src/actions/: EventAction.cc  MyUserActionInitialization.cc  MyUserActionInitialization.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  SteppingAction.cc  SteppingAction.hh  TrackingAction.cc
CRAB/src/generator/: PrimaryGenerator.cc  PrimaryGenerator.hh
CRAB/src/geometry/: CRAB_CSG.cc  CRAB_CSG.hh  CRAB_HybridGeo.cc  CRAB_HybridGeo.h  DetectorConstruction.cc  DetectorConstruction.hh  GasBoxSD.cc  MaterialsList.cc  MaterialsList.hh  OldCRAB.cc  OldCRAB.hh  OpticalMaterialProperties.cc  OpticalMaterialProperties.hh  PhotonHit.cc  PhotonHit.hh  PhotonSD.cc  PhotonSD.hh  PmtR7378A.cc  SampleFromSurface.cc  SampleFromSurface.hh  SensorHit.cc  SensorSD.cc  SensorSD.hh  SimpleBoxGeo.cc  SimpleBoxGeo.hh
CRAB/src/messenger/: DetectorMessenger.cc  DetectorMessenger.hh  GasModelParametersMessenger.cc  GasModelParametersMessenger.hh
CRAB/src/physics/: DegradModel.cc  GarfieldVUVPhotonModel.cc  GarfieldVUVPhotonModel.hh  GasModelParameters.hh  OpAbsorption.hh  OpBoundaryProcess.hh  OpMieHG.hh  OpRayleigh.hh  OpWLS.hh  OpWLS2.hh  PhysListEmStandard.cc  PhysicsList.cc  PhysicsList.hh  S2Photon.cc
CRAB/src/utils/: FileHandling.cc  FileHandling.hh  Interpolation.hh  gasNESTdet.hh
GXeSPC/: DEGRAD.OUT  GXeSPC  GXeSPC.cc  README  XenonArgonMix_0.010000.gas  XenonArgonMix_0.100000.gas  run1.mac  run2.mac  run3.mac  run4.mac  vis.mac
GXeSPC/include/: DegradModel.hh  EventAction.hh  GarfieldVUVPhotonModel.hh  GasModelParameters.hh  GasModelParametersMessenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
GXeSPC/src/: DegradModel.cc  DetectorConstruction.cc  GarfieldVUVPhotonModel.cc  GasModelParametersMessenger.cc  PrimaryGeneratorAction.cc  SteppingAction.cc  TrackingAction.cc
MWGPC/: Ar_90_CH4_10.gas  CMakeLists.txt  CMakeLists.txt~  MWGPC.cc  MWGPC.cc~  N2.gas  N2_99_O2_1.gas  run_mwgpc.mac  run_mwgpc.mac~  vis.mac~  vis_mwgpc.mac  vis_mwgpc.mac~
MWGPC/gasfiles/: Ar_90_CH4_10.gas  N2.gas  N2_70_CH4_30.gas
MWGPC/include/: DetectorConstruction.hh  DetectorConstruction.hh~  DetectorMessenger.hh  DetectorMessenger.hh~  EventAction.hh  (+8 more)
Xenon/: CMakeLists.txt  convertDegradFile.py  vis.mac
(+26 files in other folders)
